unpackaged/objects/copadoconnect__Integration_Log__c.object
<CustomObject>
	<fields>
		<fullName>copadoconnect__Copado_Integration__c</fullName>
		<deleteConstraint>Restrict</deleteConstraint>
		<label>Copado Integration</label>
		<referenceTo>copadoconnect__Copado_Integration__c</referenceTo>
		<relationshipLabel>Integration Logs</relationshipLabel>
		<relationshipName>Integration_Logs</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copadoconnect__Description__c</fullName>
		<label>Description</label>
		<length>32768</length>
		<type>Html</type>
	</fields>
	<fields>
		<fullName>copadoconnect__Error_Code__c</fullName>
		<label>Error Code</label>
		<length>100</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copadoconnect__Error_Message__c</fullName>
		<label>Error Message</label>
		<length>32768</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>copadoconnect__External_ID__c</fullName>
		<label>External ID</label>
		<length>100</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copadoconnect__Object_Name__c</fullName>
		<label>Object Name</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copadoconnect__Parent_Id__c</fullName>
		<label>Parent Id</label>
		<length>18</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copadoconnect__Result_Data__c</fullName>
		<label>Result Data</label>
		<length>32768</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>copadoconnect__Sync_Direction__c</fullName>
		<label>Sync Direction</label>
		<type>Picklist</type>
		<valueSet>
			<restricted>true</restricted>
			<valueSetDefinition>
				<value>
					<fullName>Copado &gt; Provider</fullName>
				</value>
				<value>
					<fullName>Provider &gt; Copado</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<label>Integration Log</label>
	<listViews>
		<fullName>copadoconnect__All</fullName>
		<columns>NAME</columns>
		<columns>copadoconnect__Error_Message__c</columns>
		<columns>copadoconnect__Result_Data__c</columns>
		<columns>copadoconnect__Object_Name__c</columns>
		<columns>copadoconnect__Error_Code__c</columns>
		<columns>copadoconnect__External_ID__c</columns>
		<filterScope>Everything</filterScope>
		<label>All</label>
	</listViews>
	<nameField>
		<displayFormat>IL-{0000}</displayFormat>
		<label>Integration Log Name</label>
		<type>AutoNumber</type>
	</nameField>
	<pluralLabel>Integration Logs</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>